<resources>
    <string name="app_name">ZatonInfo</string>
    <string name="your_local_guide">Your local holiday guide</string>


    <string name="hi_there">Hi there!</string>
    <string name="welcome_to">Welcome to</string>
    <string name="zaton">Zaton bay</string>
    <string name="loading_data">Loading, please wait...</string>


    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Zaton Bay</string>
    <string name="nav_header_subtitle">Dubrovnik, Croatia</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_interests">Interests</string>
    <string name="menu_map">Map</string>
    <string name="menu_activities">Activities</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_about">About Zaton</string>
    <string name="menu_bus_timetable">Bus timetable</string>
    <string name="menu_bus_stops">Bus stops</string>
    <string name="menu_welcome"></string>


    <string name="title_activity_bus_stop_map">BusStopMapActivity</string>
    <string name="help_me_choose">Help me choose</string>
    <string name="busStop">Bus stop</string>
    <string name="please_select_a_bus_stop">Please select a bus stop</string>
    <string name="FromZatonToDubrovnik">From Zaton to Dubrovnik</string>
    <string name="busInformation">Bus information</string>
    <string name="allBusDestinationsInfo">"12 - Slano\n15 - Ston\n21 - Orebić\n22 - Imotica\n26 - Majkovi\n35 - Brsečine\n\nNone of the buses depart from Zaton, so keep in mind that all of the times at the bus stop are approximate."</string>


    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>


    <string name="no_internet">No internet</string>
    <string name="internet_message_first_time">Internet is required for first time use. Please enable internet on your device to download information.</string>
    <string name="internet_message_update">Could not check for updates because there was no internet. Please enable internet next time to make sure you have the newest information.</string>
    <string name="noGpsErrorMessage">Location services are disabled. Please enable location services on your device to see your location on the map.</string>
    <string name="location_denied_message">Location permission denied. You will not be able to see your location on the map.</string>
    <string name="location_granted_message">You can now use the location button to see your location on the map.</string>
    <string name="whatsappNotInstalled">WhatsApp is not installed on your device.</string>


    <string name="interestType">InterestType</string>
    <string name="filter">Filter</string>
    <string name="locate_me">Locate me</string>
    <string name="selectedBusStopDirection">selectedBusStopDirection</string>
    <string name="selectedBusStopName">selectedBusStopName</string>
    <string name="selectedInterest">selectedInterest</string>
    <string name="activity">Activity</string>
    <string name="pointsOfInterest">pointsOfInterest</string>
    <string name="busTimetable">busTimetable</string>
    <string name="get_started">Get started</string>


    <string name="contactEmail">tomo.vodnica@gmail.com</string>
    <string name="contactPhoneNumber">00385913628422</string>
    <string name="contactPhoneNumberNoZeros">385913628422</string>
    <string name="enquiryFor">ZatonInfo - enquiry for </string>
    <string name="iAmInterestedAbout">Hi! I am interested about</string>
    <string name="book_enquire">Book / Enquire</string>
    <string name="sendAnEnquiry">Send an enquiry</string>
    <string name="sendAnEmail">Send an e-mail</string>
    <string name="toggle_all">Toggle all</string>


    <string name="setYourUsername">Set your username</string>
    <string name="settingsComment">Found a bug? Have a suggestion? Love something? Hate it? Let us know!</string>
    <string name="leave_a_review">Leave a review on Google Play</string>


    <string name="title_activity_bus_timetable">Bus timetable</string>
    <string name="thisBusStop">This bus stop</string>
    <string name="startingPoint">Starting point</string>
    <string name="number">Number</string>
    <string name="time">Time</string>
    <string name="notice">Notice</string>
    <string name="a_question_mark">A question mark</string>


    <string name="zaton_bay">Zaton Bay</string>
    <string name="about">About</string>
    <string name="about_text">Zaton is a beautiful seafront village located 10km northwest from Dubrovnik. Translated to Croatian it\'s name means \'bay\', so the bay is literally called \'Bay\'.</string>
    <string name="three_villages">Three villages</string>
    <string name="three_villages_text">Zaton consists of three parts - Zaton veliki, Zaton Mali and Štikovica. \n \'Veliki\' means big and \'Mali\' means small, however the Zaton Veliki\'s bay is actually smaller than the bay in Zaton Mali.</string>
    <string name="history">History</string>
    <string name="history_text">During the Republic of Ragusa era, the nobility loved the area and would build summer homes to use for vacation. Families like Gučetić, Menčetić, Sorkočević, Saraka and Lukarević are some to name.\nDuring the Croatian war of independance Zaton was occupied from October 1991 until April 1992 by the Yugoslav people army. Alot of houses were destroyed, burnt and robbed.</string>
    <string name="messageSent">Your message has been sent. Thank you!</string>
    <string name="messageNotSent">There has been an error and your message was not sent. Please try again.</string>
    <string name="cannot_send_empty_msg">You cannot send an empty message</string>
    <string name="no_internet_message">No internet found. You need internet connection to use this feature.</string>
    <string name="your_message_here">Your message here</string>
    <string name="exit">Exit</string>
    <string name="internetLost">Internet connection has been lost. Please make sure you have a stable internet connection and try again.</string>
    <string name="downloadErrorMessage">There has been an error downloading data. Please make sure you have a stable internet connection and try again.</string>

</resources>