<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context=".ui.WelcomeFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/h0"
        android:gravity="center"
        android:layout_marginVertical="@dimen/listItemPadding"
        android:textStyle="bold"
        android:text="@string/app_name" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/h3"
        android:text="@string/your_local_guide" />
    <Button
        android:id="@+id/btn_getStarted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/splashScreenPadding"
        android:text="@string/get_started"/>

</LinearLayout>