<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.SplashScreenActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/splash_screen_icon"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_hello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/splashScreenPadding"
            android:text="@string/hi_there"
            android:textSize="@dimen/splashGreetings" />

        <TextView
            android:id="@+id/tv_welcomeTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome_to"
            android:textSize="@dimen/splashWelcome" />

        <TextView
            android:id="@+id/tv_zaton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/splashScreenPadding"
            android:gravity="center"
            android:text="@string/zaton"
            android:textSize="@dimen/splashHeader"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/loadingSection"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:background="@drawable/val">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/tv_loadingMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading_data"
            android:textColor="@color/white"
            android:textSize="@dimen/splashLoading"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>